--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Vujahday+Script&display=swap');
+
+:root {
+    --primary-color : #5F9EA0;
+    --secondary-color : #FFFFFF;
+
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+}
+
+h1 {
+    text-align: center;
+}
+
+.container {
+    width: 40%;
+    margin: auto;
+}
+
 input, label {
     display: block;
-    
+    margin: auto;
+    width: 100%;
+    font-weight: bold;
 }
 
 input {
-    margin-top: 0.5rem;
+    margin: 1rem 0rem;
+    height: 3vh;
 }
 
 #check-number {
     margin-top: 1rem;
+    margin: auto;
+    display: block;
+    padding: 0.5rem;
+    font-size: medium;
+    border: 1px solid var(--secondary-color);
+    border-radius: 0.5rem;
+}
+
+#output {
+    font-size: large;
+    font-weight: bold;
+    margin-top: 1rem;
+    text-align: center;
 }
